log
Thu 05 Oct 2023 06:54:30 PM UTC: 
 sudoku.c | 37 ++++++++++++++++++++++++++++++++-----
 1 file changed, 32 insertions(+), 5 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:96:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   96 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
0ce1a56
Thu 05 Oct 2023 07:10:26 PM UTC: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:23: error: unused variable ‘ady_node’ [-Werror=unused-variable]
   73 |                 Node *ady_node = copy(aux_node);
      |                       ^~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:112:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  112 | int main( int argc, char *argv[] ){
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
80a0a4f
Thu 05 Oct 2023 07:11:23 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:113:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  113 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
efc7351
Thu 05 Oct 2023 07:12:12 PM UTC: 
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:115:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  115 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
b3b8218
Thu 05 Oct 2023 07:13:26 PM UTC: 
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:115:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  115 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
11859cb
Thu 05 Oct 2023 07:13:45 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
882d2ab
Thu 05 Oct 2023 07:32:12 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3d7a96e
Thu 05 Oct 2023 07:33:05 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
36418f7
Thu 05 Oct 2023 07:33:34 PM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:15: error: ‘sudo’ undeclared (first use in this function)
   69 |           if (sudo[i][j] == 0)
      |               ^~~~
sudoku.c:69:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b9a9e40
Thu 05 Oct 2023 07:34:01 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4bd1215
Thu 05 Oct 2023 07:47:47 PM UTC: 
 sudoku.c | 73 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 70 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:132:26: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
  132 |                 pushBack(list, ady_node);
      |                          ^~~~
      |                          List
sudoku.c:132:26: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c: In function ‘DFS’:
sudoku.c:173:11: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  173 |   while (!isEmpty(pila))
      |           ^~~~~~~
      |           is_empty
sudoku.c:176:22: error: void value not ignored as it ought to be
  176 |       Node* primer = pop(pila);
      |                      ^~~
sudoku.c:176:13: error: unused variable ‘primer’ [-Werror=unused-variable]
  176 |       Node* primer = pop(pila);
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8a62763
Thu 05 Oct 2023 07:48:05 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:132:26: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
  132 |                 pushBack(list, ady_node);
      |                          ^~~~
      |                          List
sudoku.c:132:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9c8c0a3
Thu 05 Oct 2023 07:49:26 PM UTC: 
 sudoku.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
0d62d73
